KAS-KC Specification * Closes https://github.com/usnistgov/ACVP/issues/1209

--- a/index.html
+++ b/index.html
@@ -347,6 +347,14 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.txt">KAS KDF TwoStep Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.html">HTML</a></li>
 				</ul>
 
+				<h4 id="kas-kc-testing-sp800-56">KAS KC Testing SP800-56</h4>
+
+				<p>Standalone KAS Key Confirmation testing from SP800-56Ar3 and/or SP800-56Br2.  Can be as a KC primitive validation as a part of a KAS validation.</p>
+
+				<ul>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.txt">KAS KC Sp800-56</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.html">HTML</a></li>
+				</ul>
+
 				<h2 id="kdfs">KDFs</h2>
 				<ul>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">Counter KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
