KAS-KDF OneStepNoCounter testing * https://github.com/usnistgov/ACVP/issues/1210

--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.txt">KAS KDF TwoStep Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.html">HTML</a></li>
 				</ul>
 
+				<h4 id="kas-kdf-testing-sp800-56cr2">KAS KDF Testing SP800-56Cr2</h4>
+
+				<p>Standalone KAS KDF testing from SP800-56Cr2. Can be used in conjunction with SSC testing (as opposed to full KAS testing) to be considered a valid KAS implementation.</p>
+
+				<ul>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.txt">KAS KDF HKDF Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.txt">KAS KDF OneStep Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestepnocounter.txt">KAS KDF OneStepNoCounter Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestepnocounter.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.txt">KAS KDF TwoStep Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.html">HTML</a></li>
+				</ul>
+
+
 				<h2 id="kdfs">KDFs</h2>
 				<ul>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">Counter KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
