KAS-KDF to KDA name
-changed README.md and index.html references from KAS-KDF to KDA
-changed KAS-KDF references in the SP800-56Cr1/r2 specs to KDA

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 				<h2 id="kas">Key Agreement</h2>
 				<h4 id="full-kas-testing">Full KAS Testing</h4>
 
-				<p>Tests against shared secret computation (SSC), key derivation functions (KDF), and optionally key confirmation (KC). Test vectors issued under this set of tests (with the exception of 1.0 component based tests) are considered “full KAS” testing.</p>
+				<p>Tests against shared secret computation (SSC), key derivation functions (KDF) or key derivation algorithms (KDA), and optionally key confirmation (KC). Test vectors issued under this set of tests (with the exception of 1.0 component based tests) are considered "full KAS" testing.</p>
 
 				<ul>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-kas-ecc.txt">KAS ECC ephemeralUnified</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-kas-ecc.html">HTML</a></li>
@@ -316,7 +316,7 @@
 
 				<h4 id="kas-ssc-testing">KAS SSC Testing</h4>
 
-				<p>Standalone KAS SSC testing from SP800-56A/B. Can be used in conjunction with KDF testing (as opposed to full KAS testing) to be considered a valid KAS implementation.</p>
+				<p>Standalone KAS SSC testing from SP800-56A/B. Can be used in conjunction with KDF/KDA testing and optionally key confirmation testing (as opposed to "full KAS" testing) to be considered a valid KAS implementation.</p>
 
 				<ul>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-kas-ecc.txt">KAS ECC ephemeralUnified</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-kas-ecc.html">HTML</a></li>
@@ -352,14 +352,18 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ssc-ifc.txt">KAS IFC SSC KAS2 Sp800-56Br2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-ssc-ifc.html">HTML</a></li>
 				</ul>
 
-				<h4 id="kas-kdf-testing-sp800-56cr1">KAS KDF Testing SP800-56Cr1</h4>
+				<h4 id="kas-kdf-testing-sp800-56cr1">KDA Testing SP800-56Cr1/r2</h4>
 
-				<p>Standalone KAS KDF testing from SP800-56Cr1. Can be used in conjunction with SSC testing (as opposed to full KAS testing) to be considered a valid KAS implementation.</p>
+				<p>Standalone KDA testing from SP800-56Cr1 or SP800-56Cr2. Can be used in conjunction with SSC testing and optionally key confirmation testing (as opposed to "full KAS" testing) to be considered a valid KAS implementation.</p>
 
 				<ul>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.txt">KAS KDF HKDF Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.txt">KAS KDF OneStep Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.txt">KAS KDF TwoStep Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.txt">KDA HKDF Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.txt">KDA OneStep Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.txt">KDA TwoStep Sp800-56Cr1</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.txt">KDA HKDF Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.txt">KDA OneStep Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestepnocounter.txt">KDA OneStepNoCounter Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestepnocounter.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.txt">KDA TwoStep Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.html">HTML</a></li>
 				</ul>
 
 				<h4 id="kas-kc-testing-sp800-56">KAS KC Testing SP800-56</h4>
@@ -368,17 +372,6 @@
 
 				<ul>
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.txt">KAS KC Sp800-56</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.html">HTML</a></li>
-				</ul>
-
-				<h4 id="kas-kdf-testing-sp800-56cr2">KAS KDF Testing SP800-56Cr2</h4>
-
-				<p>Standalone KAS KDF testing from SP800-56Cr2. Can be used in conjunction with SSC testing (as opposed to full KAS testing) to be considered a valid KAS implementation.</p>
-
-				<ul>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.txt">KAS KDF HKDF Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-hkdf.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.txt">KAS KDF OneStep Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestep.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestepnocounter.txt">KAS KDF OneStepNoCounter Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-onestepnocounter.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.txt">KAS KDF TwoStep Sp800-56Cr2</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kdf-twostep.html">HTML</a></li>
 				</ul>
 
 				<h2 id="kdfs">KDFs</h2>
@@ -462,7 +455,7 @@
 				</ul>
 
 				<h1 id="licensing">Licensing Terms</h1>
-				<p>This data was developed by employees of the National Institute of Standards and Technology (NIST), an agency of the Federal Government, in collaboration with third-party contributors. Pursuant to title 17 United States Code Section 105, works of NIST employees are not subject to copyright protection in the United States and are considered to be in the public domain. The data is provided by NIST as a public service and is expressly provided "AS IS."" NIST MAKES NO WARRANTY OF ANY KIND, EXPRESS, IMPLIED OR STATUTORY, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT AND DATA ACCURACY. NIST does not warrant or make any representations regarding the use of the data or the results thereof, including but not limited to the correctness, accuracy, reliability or usefulness of the data. NIST SHALL NOT BE LIABLE AND YOU HEREBY RELEASE NIST FROM LIABILITY FOR ANY INDIRECT, CONSEQUENTIAL, SPECIAL, OR INCIDENTAL DAMAGES (INCLUDING DAMAGES FOR LOSS OF BUSINESS PROFITS, BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION, AND THE LIKE), WHETHER ARISING IN TORT, CONTRACT, OR OTHERWISE, ARISING FROM OR RELATING TO THE DATA (OR THE USE OF OR INABILITY TO USE THIS DATA), EVEN IF NIST HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.</p>
+				<p>This data was developed by employees of the National Institute of Standards and Technology (NIST), an agency of the Federal Government, in collaboration with third-party contributors. Pursuant to title 17 United States Code Section 105, works of NIST employees are not subject to copyright protection in the United States and are considered to be in the public domain. The data is provided by NIST as a public service and is expressly provided "AS IS." NIST MAKES NO WARRANTY OF ANY KIND, EXPRESS, IMPLIED OR STATUTORY, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT AND DATA ACCURACY. NIST does not warrant or make any representations regarding the use of the data or the results thereof, including but not limited to the correctness, accuracy, reliability or usefulness of the data. NIST SHALL NOT BE LIABLE AND YOU HEREBY RELEASE NIST FROM LIABILITY FOR ANY INDIRECT, CONSEQUENTIAL, SPECIAL, OR INCIDENTAL DAMAGES (INCLUDING DAMAGES FOR LOSS OF BUSINESS PROFITS, BUSINESS INTERRUPTION, LOSS OF BUSINESS INFORMATION, AND THE LIKE), WHETHER ARISING IN TORT, CONTRACT, OR OTHERWISE, ARISING FROM OR RELATING TO THE DATA (OR THE USE OF OR INABILITY TO USE THIS DATA), EVEN IF NIST HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.</p>
 
 				<p>To the extent that NIST may hold copyright in countries other than the United States, you are hereby granted the non-exclusive irrevocable and unconditional right to print, publish, prepare derivative works and distribute the NIST data, in any medium, or authorize others to do so on your behalf, on a royalty-free basis throughout the world.</p>
 
