Adds KMAC-KDF to the README and index lists

--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">Counter KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">Feedback KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">Double Pipeline Iterator KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">KMAC KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev1.txt">IKEv1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev1.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev2.txt">IKEv2</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev2.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-snmp.txt">SNMP</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-snmp.html">HTML</a></li>
