Updated adoc sections to correctly link the proper Sp800 and not SP800.

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 				<h4 id="kas-kc-testing-sp800-56">KAS KC Testing SP800-56</h4>
 
-				<p>Standalone KAS Key Confirmation testing from SP800-56Ar3 and/or SP800-56Br2.  Can be as a KC primitive validation as a part of a KAS validation.</p>
+				<p>Standalone KAS Key Confirmation testing from SP800-56Ar3 and/or Sp800-56Br2.  Can be as a KC primitive validation as a part of a KAS validation.</p>
 
 				<ul>
 					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.txt">KAS KC Sp800-56</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.html">HTML</a></li>
