Changes section heading from KAS to SP 800-56 series

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<li><a href="#macs">Message Authentication</a></li>
 							<li><a href="#drbgs">DRBGs</a></li>
 							<li><a href="#dss">Digital Signature</a></li>
-							<li><a href="#kas">Key Agreement</a></li>
+							<li><a href="#kas">SP 800-56 Series Algorithms</a></li>
 							<li><a href="#kdfs">KDFs</a></li>
 							<li><a href="#safe-primes">Safe Primes</a></li>
 							<li><a href="#conditioning-components">Conditioning Components</a></li>
@@ -272,8 +272,8 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a> - DEMO only</li>
 				</ul>
 
-				<h2 id="kas">Key Agreement</h2>
-				<h4 id="full-kas-testing">Full KAS Testing</h4>
+				<h2 id="kas">SP 800-56 Series Algorithms</h2>
+				<h4 id="full-kas-testing">Full KAS and KTS IFC Testing</h4>
 
 				<p>Tests against shared secret computation (SSC), key derivation functions (KDF) or key derivation algorithms (KDA), and optionally key confirmation (KC). Test vectors issued under this set of tests (with the exception of 1.0 component based tests) are considered "full KAS" testing.</p>
 
