updates listing of RSA primitives

--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: signaturePrimitive (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: signaturePrimitive v2.0 (Component) </a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: decryptionPrimitive (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: signaturePrimitive 1.0 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: signaturePrimitive 2.0 (Component) </a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: decryptionPrimitive 1.0 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: decryptionPrimitive Sp800-56Br2 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: legacySigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.txt">ECDSA mode: sigGenComponent</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.html">HTML</a></li>
