Adds LMS document and cleans up README

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 							<li><a href="#kdfs">KDFs</a></li>
 							<li><a href="#safe-primes">Safe Primes</a></li>
 							<li><a href="#conditioning-components">Conditioning Components</a></li>
+							<li><a href="#stateful-hash-based-signatures">Stateful Hash-Based Signatures</a></li>
 						</ul>
 					</li>
 					<li><a href="#access">Accessing the Server</a></li>
@@ -410,7 +411,14 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-conditioning-components.txt">ConditioningComponent Hash_DF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-conditioning-components.html">HTML</a></li>
 				</ul>
 
-				<p>The prod server supports all of the above except for the EdDSA variants, AES-FF3-1, and AES-GCM-SIV. Some of these algorithms have NIST SP800 series drafts in progress and will be available on the prod server when the draft becomes a standard.</p>
+				<h2 id="stateful-hash-based-signatures">Stateful Hash-Based Signatures</h2>
+				<ul>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS KeyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS SigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS SigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
+				</ul>
+
+				<p>The prod server supports all of the above except for, AES-FF3-1, and AES-GCM-SIV. Some of these algorithms have NIST SP800 series drafts in progress and will be available on the prod server when the draft becomes a standard.</p>
 
 				<h1 id="access">Accessing the Server</h1>
 				<p>To access the demo server one needs a TLS credential <strong>and</strong> a one-time password (OTP). The <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-spec.html">protocol specification</a> and other development information are available in this repository. You may want to use the companion <a href="https://github.com/cisco/libacvp">ACVP client</a> to jump-start your work.</p>
