updates metanorma install links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 				<p>Metanorma is a library for writing standards. It can compile <code class="language-plaintext highlighter-rouge">.adoc</code> files into multiple common standards formats including the IETF's RFC format.</p>
 
-				<p>Use the instructions here to set up Metanorma: <a href="https://www.metanorma.com/author/topics/install/">https://www.metanorma.com/author/topics/install/</a></p>
+				<p>Use the instructions here to set up Metanorma: <a href="https://www.metanorma.org/install/">https://www.metanorma.org/install/</a></p>
 
 				<p>To compile an individual file, to make sure your gem versions are up to date run</p>
 
