--- a/index.html
+++ b/index.html
@@ -413,9 +413,9 @@
 
 				<h2 id="stateful-hash-based-signatures">Stateful Hash-Based Signatures</h2>
 				<ul>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS KeyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS SigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS SigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
 				</ul>
 
 				<p>The prod server supports all of the above except for, AES-FF3-1, and AES-GCM-SIV. Some of these algorithms have NIST SP800 series drafts in progress and will be available on the prod server when the draft becomes a standard.</p>
