further identifies CVMP "component" tests

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: decryptionPrimitive 1.0 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: decryptionPrimitive Sp800-56Br2 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.txt">RSA mode: legacySigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-rsa.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.txt">ECDSA mode: sigGenComponent</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.txt">ECDSA mode: sigGen Component</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.txt">ECDSA mode: keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.txt">ECDSA mode: keyVer</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.txt">ECDSA mode: sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-ecdsa.html">HTML</a></li>
@@ -374,7 +374,7 @@
 				<p>Standalone KAS Key Confirmation testing from SP800-56Ar3 and/or SP800-56Br2.  Can be as a KC primitive validation as a part of a KAS validation.</p>
 
 				<ul>
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.txt">KAS KC Sp800-56</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.txt">KAS KC Sp800-56 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kas-kc-sp800-56.html">HTML</a></li>
 				</ul>
 
 				<h2 id="kdfs">KDFs</h2>
@@ -383,17 +383,17 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">Feedback KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">Double Pipeline Iterator KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.txt">KMAC KDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kbkdf.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev1.txt">IKEv1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev1.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev2.txt">IKEv2</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev2.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-snmp.txt">SNMP</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-snmp.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-srtp.txt">SRTP</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-srtp.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ssh.txt">SSH</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ssh.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.txt">TLS v1.0/v1.1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.txt">TLS v1.2</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.html">HTML</a></li>					
-					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.txt">TLS v1.3</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tpm.txt">TPM</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tpm.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x963.txt">ANSX9.63</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x963.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x942.txt">ANSX9.42</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x942.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev1.txt">IKEv1 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev1.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev2.txt">IKEv2 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ikev2.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-snmp.txt">SNMP (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-snmp.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-srtp.txt">SRTP (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-srtp.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ssh.txt">SSH (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ssh.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.txt">TLS v1.0/v1.1 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.txt">TLS v1.2 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tls.html">HTML</a></li>					
+					<li><a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.txt">TLS v1.3 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-hammett-acvp-kdf-tls-v1.3.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tpm.txt">TPM (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-tpm.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x963.txt">ANSX9.63 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x963.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x942.txt">ANSX9.42 (Component)</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-kdf-ansi-x942.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-pbkdf.txt">PBKDF</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-pbkdf.html">HTML</a></li>
 				</ul>
 
