--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-dsa.txt">DSA mode: sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-dsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-dsa.txt">DSA mode: pqgGen</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-dsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-dsa.txt">DSA mode: pqgVer</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-dsa.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a> - DEMO only</li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: keyVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a> - DEMO only</li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a> - DEMO only</li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a> - DEMO only</li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: keyVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.txt">EDDSA mode: sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-eddsa.html">HTML</a></li>
 				</ul>
 
 				<h2 id="kas">SP 800-56 Series Algorithms</h2>
