Adds GA4 compatibility

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <link rel="stylesheet" href="https://pages.nist.gov/nist-header-footer/css/nist-combined.css">
         <script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
 
+	<script async src=https://www.googletagmanager.com/gtag/js?id=381374812></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', ‘381374812');
+	</script>
+
         <script async type="text/javascript" id="_fed_an_ua_tag" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=NIST&subagency=github&pua=UA-66610693-1&yt=true&exts=ppsx,pps,f90,sch,rtf,wrl,txz,m1v,xlsm,msi,xsd,f,tif,eps,mpg,xml,pl,xlt,c"></script>
         
         <script type="text/javascript">
