Adds SLH-DSA links to index.html and README

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 							<li><a href="#safe-primes">Safe Primes</a></li>
 							<li><a href="#conditioning-components">Conditioning Components</a></li>
 							<li><a href="#stateful-hash-based-signatures">Stateful Hash-Based Signatures</a></li>
+							<li><a href="#stateless-hash-based-signatures">Stateless Hash-Based Signatures</a></li>
 							<li><a href="#module-lattice-algorithms">Module-Lattice Algorithms</a></li>
 						</ul>
 					</li>
@@ -424,6 +425,13 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.txt">LMS sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-lms.html">HTML</a></li>
+				</ul>
+
+				<h2 id="stateless-hash-based-signatures">Stateless Hash-Based Signatures</h2>
+				<ul>
+					<li><a href="https://pages.nist.gov/ACVP/draft-livelsberger-acvp-slh-dsa.txt">SLH-DSA keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-livelsberger-acvp-slh-dsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-livelsberger-acvp-slh-dsa.txt">SLH-DSA sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-livelsberger-acvp-slh-dsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-livelsberger-acvp-slh-dsa.txt">SLH-DSA sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-livelsberger-acvp-slh-dsa.html">HTML</a></li>
 				</ul>
 
 				<h2 id="module-lattice-algorithms">Module-Lattice Algorithms</h2>
